# CPP_HW

Bind/: CMakeLists.txt  bind.h  main.cpp
Task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  multiply  multiply.asm  subtract  subtract.asm  subtract2  subtract2.asm
Task2/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
Task2-build/: BIGINT.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Task2_64/: CMakeCache.txt  Makefile  big_integer.cpp  big_integer_testing  big_integer_testing.cpp  cmake_install.cmake
Task3/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
Task3/vector/: vector_uint32.cpp  vector_uint32.h
Task4/: CMakeLists.txt
Task4/HuffmanApp/: CMakeCache.txt  CMakeLists.txt  HuffmanApp  HuffmanApp.cbp  Makefile  Project.cbp  cmake_install.cmake  figure.hfm  huffman.cpp  huffman.h  main.cpp  output.docx  output.hfm
Task4/lib/: CMakeLists.txt  binary_tree.cpp  code_table.cpp  compression.cpp  compressor.cpp  decompression.cpp  decompressor.cpp  huffman_library_testing.cpp  weight_counter.cpp
Task4/lib/header/: binary_tree.h  code_table.h  compression.h  compressor.h  decompression.h  decompressor.h  exceptions.h  weight_counter.h
Task4/utility/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Task5/: CMakeLists.txt  main.cpp  persistent_set.h
Task5/smart_pointers/: linked_ptr.h  shared_ptr.h
Variant/: CMakeLists.txt  main.cpp  storage.h  variant.h  variant_alternative.h
any_container/: CMakeLists.txt  any_container.h  any_iterator.h  main.cpp
any_iterator/: CMakeLists.txt  any_iterator.h  main.cpp
list/: CMakeLists.txt  main.cpp  my_list.h
